--- a/Nexflix/index.html
+++ b/Nexflix/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/movies.css.css?after">
 </head>
 <body>
-    <div class="line" style="background-color: #181818; position: fixed; top:920px; width: 100%; height: 30px; "></div>
+    <div class="line" style="background-color: #181818; position: fixed; top:920px; width: 100%; height: 30px;z-index: 2; "></div>
     <div style="background-color: gray; width: 1600px; height: 2px; top: 1120px; position: absolute; left: 250px;"></div>
 <header class="icon">
         <img class="money" src="images/moneyheist.jpg" width="100%" style="position: relative;" >
@@ -35,8 +35,9 @@
             <div style="position: absolute; top: 1100px; font-size: 35px; font-weight: bold;">Trading Now</div>
 </header>
 <div class="movs" style="display: grid;
+position: relative;
 grid-template-columns: 25% 25% 25% 25%;
-grid-template-rows: 50% 50%; margin-top: 100px;  text-align: center; grid-row-gap: 50px; margin-bottom: 100px;">
+grid-template-rows: 50% 50%; margin-top: 100px;  text-align: center; grid-row-gap: 50px; margin-bottom: 100px; z-index: 1;">
 <div class="m1"><img src="images/mpic1.jpg"></div>
 <div class="m2"><img src="images/mpic3.jpg"></div>
 <div class="m3"><img src="images/mpic4.jpg"></div>
