--- a/Nexflix/index.html
+++ b/Nexflix/index.html
@@ -4,11 +4,11 @@
 
     <title>NetClone</title>
     <link rel="stylesheet" href="styles/general.css?after">
-    <link rel="stylesheet" href="styles/movies.css.css?after">
 </head>
 <body>
-    <div class="line" style="background-color: #181818; position: fixed; top:920px; width: 100%; height: 30px;z-index: 2; "></div>
-    <div style="background-color: gray; width: 1600px; height: 2px; top: 1120px; position: absolute; left: 250px;"></div>
+<div class="line" style="background-color: #181818; position: fixed; top:920px; width: 100%; height: 30px;z-index: 2; "></div>
+<div style="background-color: grey; width: 1600px; height: 2px; top: 1120px; position: absolute; left: 250px;"></div>
+<div style="background-color: grey; width: 100%; height: 6px; top: 1650px; position: absolute; opacity: 0.7;"></div>
 <header class="icon">
         <img class="money" src="images/moneyheist.jpg" width="100%" style="position: relative;" >
             <div class="netlogo" style=" position :absolute; top: 0;">
@@ -17,7 +17,7 @@
             <div class="goormlogo" style="position: absolute; top: 0; right: 0;">
                 <img class="goorm" src="images/goormlogo.png" width="100px" height="70px">
             </div>
-            <div class="moneycc" style="position: absolute; font-size: 48px; font-weight: bold; top: 200px;">
+            <div class="moneycc" style="position: absolute; font-size: 40px; font-weight: bold; top: 200px; font-family: 'Noto Sans KR', sans-serif; font-weight: bold">
                 Money Heist
             </div>
             <button class="playb" style="position: absolute; left: 0; top: 250px; background-color: #2e2b2b96;  font-size: 30px ; color: white; border: 0; outline: 0 ">
@@ -26,14 +26,15 @@
             <button class="myb" style="position: absolute; left: 90px; top: 250px; background-color: #2e2b2b96;  font-size: 30px; color: white; border: 0; outline: 0;" >
                 My List
             </button>
-            <div class="caption" style="position: absolute; top: 300px; font-size: 20px;">
+            <div class="caption" style="position: absolute; top: 300px; font-size: 20px;font-family: Roboto ">
                 english english paperhouse Money Heist <br>
                 Ah Css why not working NOOO OMG TnT <br>
                 Somebody helpme!!
             </div>
-            <div style="position: absolute; top: 580px; font-size: 35px; font-weight: bold;">NETFLIX ORIGINALS</div>
-            <div style="position: absolute; top: 1100px; font-size: 35px; font-weight: bold;">Trading Now</div>
+            <div style="position: absolute; top: 600px; font-size: 50px;  font-family: 'Bebas Neue'">NETFLIX ORIGINALS</div>
+            <div style="position: absolute; top: 1090px; font-size: 50px;  font-family: 'Bebas Neue'">Trading Now</div>
 </header>
+
 <div class="movs" style="display: grid;
 position: relative;
 grid-template-columns: 25% 25% 25% 25%;
@@ -46,6 +47,16 @@ grid-template-rows: 50% 50%; margin-top: 100px;  text-align: center; grid-row-ga
 <div class="m6"><img src="images/mpic6.jpg"></div>
 <div class="m7"><img src="images/mpic7.jpg"></div>
 <div class="m8"><img src="images/mpic8.jpg"></div>
+</div>
+<div style="top: 1700px;bottom: 30px;left: 250px; color: white; z-index: 0; position: absolute; font-size: 15px; text-align: left;margin-bottom: 200px; padding-bottom: 200px;">
+    Copyright netflix Goorm gwajae honeyjam 123-3210-123<br>
+    Ulsan city this stop is sinchon sinchon<br>
+    The door is on your left<br>
+    Tel no +82-111-222-3333
+    <br>e-mail hello@nexflix.com<br>
+    saupja no. 121212-1111
+    <br>Thanks goorm :)
+
 </div>
 </body>
 </html>
