--- a/Nexflix/index.html
+++ b/Nexflix/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <title>NetClone</title>
     <link rel="stylesheet" href="styles/general.css?after">
 </head>
 <body>
-<div class="line" style="background-color: #181818; position: fixed; top:920px; width: 100%; height: 30px;z-index: 2; "></div>
+<div class="line"
+     style="background-color: #181818; position: fixed; top:920px; width: 100%; height: 30px;z-index: 2; "></div>
 <div style="background-color: grey; width: 1600px; height: 2px; top: 1120px; position: absolute; left: 250px;"></div>
 <div style="background-color: grey; width: 100%; height: 6px; top: 1650px; position: absolute; opacity: 0.7;"></div>
 <header class="icon">
-        <img class="money" src="images/moneyheist.jpg" width="100%" style="position: relative;" >
-            <div class="netlogo" style=" position :absolute; top: 0;">
-                <img class="netflix" src="images/netlogo.jpg" width="150px" height="70px" >
-            </div>
-            <div class="goormlogo" style="position: absolute; top: 0; right: 0;">
-                <img class="goorm" src="images/goormlogo.png" width="100px" height="70px">
-            </div>
-            <div class="moneycc" style="position: absolute; font-size: 40px; font-weight: bold; top: 200px; font-family: 'Noto Sans KR', sans-serif; font-weight: bold">
-                Money Heist
-            </div>
-            <button class="playb" style="position: absolute; left: 0; top: 250px; background-color: #2e2b2b96;  font-size: 30px ; color: white; border: 0; outline: 0 ">
-                Play
-            </button>
-            <button class="myb" style="position: absolute; left: 90px; top: 250px; background-color: #2e2b2b96;  font-size: 30px; color: white; border: 0; outline: 0;" >
-                My List
-            </button>
-            <div class="caption" style="position: absolute; top: 300px; font-size: 20px;font-family: Roboto ">
-                english english paperhouse Money Heist <br>
-                Ah Css why not working NOOO OMG TnT <br>
-                Somebody helpme!!
-            </div>
-            <div style="position: absolute; top: 600px; font-size: 50px;  font-family: 'Bebas Neue'">NETFLIX ORIGINALS</div>
-            <div style="position: absolute; top: 1090px; font-size: 50px;  font-family: 'Bebas Neue'">Trading Now</div>
+    <img class="money" src="images/moneyheist.jpg" width="100%" style="position: relative;">
+    <div class="netlogo" style=" position :absolute; top: 0;">
+        <img class="netflix" src="images/netlogo.jpg" width="150px" height="70px">
+    </div>
+    <div class="goormlogo" style="position: absolute; top: 0; right: 0;">
+        <img class="goorm" src="images/goormlogo.png" width="100px" height="70px">
+    </div>
+    <div class="moneycc"
+         style="position: absolute; font-size: 40px; font-weight: bold; top: 200px; font-family: 'Noto Sans KR', sans-serif; font-weight: bold">
+        Money Heist
+    </div>
+    <button class="playb"
+            style="position: absolute; left: 0; top: 250px; background-color: #2e2b2b96;  font-size: 30px ; color: white; border: 0; outline: 0 ">
+        Play
+    </button>
+    <button class="myb"
+            style="position: absolute; left: 90px; top: 250px; background-color: #2e2b2b96;  font-size: 30px; color: white; border: 0; outline: 0;">
+        My List
+    </button>
+    <div class="caption" style="position: absolute; top: 300px; font-size: 20px;font-family: Roboto ">
+        english english paperhouse Money Heist <br>
+        Ah Css why not working NOOO OMG TnT <br>
+        Somebody helpme!!
+    </div>
+    <div style="position: absolute; top: 600px; font-size: 50px;  font-family: 'Bebas Neue'">NETFLIX ORIGINALS</div>
+    <div style="position: absolute; top: 1090px; font-size: 50px;  font-family: 'Bebas Neue'">Trading Now</div>
 </header>
 
 <div class="movs" style="display: grid;
 position: relative;
 grid-template-columns: 25% 25% 25% 25%;
 grid-template-rows: 50% 50%; margin-top: 100px;  text-align: center; grid-row-gap: 50px; margin-bottom: 100px; z-index: 1;">
-<div class="m1"><img src="images/mpic1.jpg"></div>
-<div class="m2"><img src="images/mpic3.jpg"></div>
-<div class="m3"><img src="images/mpic4.jpg"></div>
-<div class="m4"><img src="images/mpic5.jpg"></div>
-<div class="m5"><img src="images/mpic2.jpg"></div>
-<div class="m6"><img src="images/mpic6.jpg"></div>
-<div class="m7"><img src="images/mpic7.jpg"></div>
-<div class="m8"><img src="images/mpic8.jpg"></div>
+    <div class="m1"><img src="images/mpic1.jpg"></div>
+    <div class="m2"><img src="images/mpic3.jpg"></div>
+    <div class="m3"><img src="images/mpic4.jpg"></div>
+    <div class="m4"><img src="images/mpic5.jpg"></div>
+    <div class="m5"><img src="images/mpic2.jpg"></div>
+    <div class="m6"><img src="images/mpic6.jpg"></div>
+    <div class="m7"><img src="images/mpic7.jpg"></div>
+    <div class="m8"><img src="images/mpic8.jpg"></div>
 </div>
 <div style="top: 1700px;bottom: 30px;left: 250px; color: white; z-index: 0; position: absolute; font-size: 15px; text-align: left;margin-bottom: 200px; padding-bottom: 200px;">
     Copyright netflix Goorm gwajae honeyjam 123-3210-123<br>
@@ -56,7 +59,6 @@ grid-template-rows: 50% 50%; margin-top: 100px;  text-align: center; grid-row-ga
     <br>e-mail hello@nexflix.com<br>
     saupja no. 121212-1111
     <br>Thanks goorm :)
-
 </div>
 </body>
 </html>
